--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         // 搜索标题的最大程级, 1 - 6
         depth: 3,
       },
-
+	  ga: 'UA-XXXXX-Y',
     }
   </script>
   <!-- Docsify v4 -->
@@ -45,5 +45,7 @@
    <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
    <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-c.min.js"></script>
      <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script>
+	 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script>
+	 <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-java.min.js"></script>
 </body>
 </html>
