--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         // 搜索标题的最大程级, 1 - 6
         depth: 3,
       },
-	  ga: 'UA-XXXXX-Y',
+	  ga: 'G-GMCXB90WFB',
     }
   </script>
   <!-- Docsify v4 -->
