--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
         depth: 3,
       },
 	  ga: 'UA-192018940-1',
+	   beian: {
+        ICP: "苏ICP备19074217号-1",
+        NISMSP: {
+            number: "",
+            url: "",
+        },
+    },
     }
   </script>
   <!-- Docsify v4 -->
@@ -47,5 +54,7 @@
      <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script>
 	 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script>
 	 <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-java.min.js"></script>
+	 <script src="https://cdn.jsdelivr.net/npm/docsify-beian@latest/dist/beian.min.js"></script>
+
 </body>
 </html>
